# hamilton-dp-bipartite

./: .gitignore  LICENSE  README.MD  pyproject.toml
examples/: example_n3.py
src/hamilton_dp/: __init__.py  backtracking.py  dp_solver.py  intervals.py  report.py  visualization.py
tests/: test_small_graphs.py
